--- a/src/common/styles/adapt.less
+++ b/src/common/styles/adapt.less
@@ -1,5 +1,11 @@
 // 适配1440-1920
 @media screen and (min-width: 1441px) {
+  .login {
+    background-image: url(~@/assets/img/system/login-back1920.png);
+    min-width: 1366px;
+    min-height: 625px;
+  }
+
   .search-form-inline {
     .el-col-8 {
       width: 25%;
