--- a/src/common/styles/el-reset.less
+++ b/src/common/styles/el-reset.less
@@ -198,6 +198,10 @@
 
   .el-form-item {
     padding: 0 20px 15px 20px;
+
+    .el-form-item__content {
+      line-height: normal;
+    }
   }
 
   .search-btn {
